# FastAPI4

./: .gitignore  main.py  pyproject.toml
static/: index.html
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
