[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.0",
    "fastapi[standard]>=0.138.1",
    "passlib[bcrypt]>=1.7.4",
    "py-ulid>=1.0.3",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]
